# Scotts-PyQt-Template

./: .gitignore  404.html  index.html  pyproject.toml  sitemap.xml
docs/: README.md
examples/: SharedMemory.py  ui_Example.py
help/: index.html
src/: BaseConfigs.py  BaseSharedMemory.py  __version__.py  ui_BaseWidget.py
src/scotts_pyqt_template/: BaseSharedMemory.py  ui_BaseWidget.py
